--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.1.5",
     "nodemailer": "^6.10.0"
   }
 }
